--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/xl8/grunt-version-bump",
   "dependencies": {
+    "commander": "^2.8.1",
     "detect-indent": "~0.1.3",
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "nomnom": "^1.8.1"
   },
   "devDependencies": {
     "grunt-contrib-nodeunit": "~0.2.2",
